(In Git)

 === New features

 === Bufixes

== 0.5.0 2010-02-22

 === New features
  * "should receive <x> emails with subject <the_subject>" step definition (Balint Erdi)

 === Bufixes
  * Gracefuly handle cases where emails do not have a 'to' value. (Kieran Pilkington)

 === Bufixes

== 0.4.0 2010-01-07

 === New features
    * Added support for action_mailer_cache_delivery plugin. (Dan Dofter)
      You must use the fork at: http://github.com/liangzan/action_mailer_cache_delivery

 === Bufixes
    * be_delivered_from matcher now compares both sender name and email address. (Dan Dofter)

== 0.3.8 2009-12-23

 === Bufixes
    * Guard against cc and bcc fields being nil for ActionMailer. (Piotr Sarnacki)

== 0.3.7 2009-12-17

 === New features
 * Matchers are now Ruby 1.9 compatible. (John Dewey)

== 0.3.6 2009-12-16

 === New features
 * Cucumber steps for be_delivered_from, have_header matchers. (Joseph Holsten)
 * Explicit regular expression steps. i.e. "I should see /foo/ in the email body" (Joseph Holsten)

== 0.3.5 2009-09-30 The Pony Release!

 === New features
 * Support for Pony mailer library. (Rob Holland)

== 0.3.4 2009-09-26

=== Bugfixes
 * Typo and logic fixes for DeliverFrom matcher. (Yury Kotlyarov)

 == 0.3.3 2009-09-18

 === New features
 * DeliverFrom matcher. i.e. email.should deliver_from(blah) or email.should be_delivered_from(blah) (Diego Carrion)

 == 0.3.2 2009-09-10

 === New features
  * Support for delayed_job. (Kieran Pilkington)

 == 0.3.1 2009-08-19
This release is a general refactoring of the steps and helpers.
The example rails app was also updated to use the lateset rails and webrat.  It also takes advantages
and the newer step definistions including the new third-person forms.

Some of the generated steps are being removed in favor of some of the newer ones.  The older ones
will remain until 0.4.0 but will issue deprecation warnings.

Big shoutout to Kieran Pilkington who did the majority of work for this release.
